fixed reject-page css-issues on IE

--- a/app/styles/_reject.scss
+++ b/app/styles/_reject.scss
@@ -6,6 +6,7 @@
       display: table-row;
       input[type="radio"] {
         display: inline-block;
+        background: inherit;
       }
 
       input[type="radio"] + label {
@@ -16,7 +17,9 @@
           font-size: 0.8rem;
         }
         input {
-          width: 100%;
+          width: 97.3%;
+          @media #{$small-only} {
+            width: 96%; }
         }
       }
       input[type="radio"]:checked + label {
@@ -28,4 +31,12 @@
   .error {
     border-color: $coral-red !important;
     background: $light-pitch !important; }
+
+  textarea {
+    margin: 0 0 1rem 1rem;
+
+    @media #{$small-only} {
+      margin-left: 0.3rem;
+    }
+  }
 }
